<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CADASTRO DE VEÍCULO"
        android:textColor="@color/neon_green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_plate"
        android:textColor="@color/neon_green"
        android:textColorHint="#4439FF14"
        android:backgroundTint="@color/neon_green"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_color"
        android:textColor="@color/neon_green"
        android:textColorHint="#4439FF14"
        android:backgroundTint="@color/neon_green"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_brand"
        android:textColor="@color/neon_green"
        android:textColorHint="#4439FF14"
        android:backgroundTint="@color/neon_green"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_model"
        android:textColor="@color/neon_green"
        android:textColorHint="#4439FF14"
        android:backgroundTint="@color/neon_green"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_prisma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vehicle_prisma"
        android:textColor="@color/neon_green"
        android:textColorHint="#4439FF14"
        android:backgroundTint="@color/neon_green"
        android:layout_marginBottom="32dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_save_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_vehicle"
        android:backgroundTint="@color/neon_green"
        android:textColor="@color/carbon_black" />

</LinearLayout>
